--- a/React_Prac/login/src/App.css
+++ b/React_Prac/login/src/App.css
@@ -1,17 +1,12 @@
 .App {
   display: flex;
   justify-content: center;
+  align-content: center;
 }
 
 .App-logo {
-  height: 300px;
+  height: 200px;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -27,13 +22,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
